@@ -6733,17 +6733,19 @@ void end_visit(const GroupByClause& v, void* /*visit_state*/)
 
     if (j == i)
     {
+      const QueryLoc& specLoc = groupSpec.get_location();
+
       // Since group specs can add let vars, and change the value of the
       // input_expr after the expr has been read, we delegate the actual looking
       // up of the variable until now, to get the most recent and correct value.
 
       store::Item_t varName;
-      expand_no_default_qname(varName, groupSpec.get_var_name(), loc);
+      expand_no_default_qname(varName, groupSpec.get_var_name(), specLoc);
 
       VarInfo* var = sctx->lookup_var(varName.getp());
       if (!var)
       {
-        RAISE_ERROR(err::XPST0008, loc,
+        RAISE_ERROR(err::XPST0008, specLoc,
         ERROR_PARAMS(varName->getStringValue(), ZED(VariabledUndeclared)));
       }
 
@@ -6751,16 +6753,22 @@ void end_visit(const GroupByClause& v, void* /*visit_state*/)
 
       if (inputExpr->get_expr_kind() == var_expr_kind)
       {
-        inputExpr = theExprManager->create_wrapper_expr(theRootSctx, loc, inputExpr);
+        inputExpr = theExprManager->
+        create_wrapper_expr(theRootSctx, specLoc, inputExpr);
       }
 
       inputExpr = wrap_in_atomization(inputExpr);
+
+      inputExpr = wrap_in_type_match(inputExpr,
+                                     theRTM.ANY_ATOMIC_TYPE_ONE,
+                                     specLoc,
+                                     TreatIterator::MULTI_VALUED_GROUPING_KEY);
 
       // We need to do this to handle grouping vars with same names but
       // different collations.
       push_scope();
 
-      var_expr* gVar = bind_var(loc,
+      var_expr* gVar = bind_var(specLoc,
                                 groupSpec.get_var_name(),
                                 var_expr::groupby_var,
                                 inputExpr->get_return_type());
@@ -6772,7 +6780,7 @@ void end_visit(const GroupByClause& v, void* /*visit_state*/)
         std::string collationUri = groupSpec.get_collation_spec()->get_uri().str();
 
         if (! theSctx->is_known_collation(collationUri))
-          RAISE_ERROR(err::XQST0076, loc, ERROR_PARAMS(collationUri));
+          RAISE_ERROR(err::XQST0076, specLoc, ERROR_PARAMS(collationUri));
 
         collations.push_back(collationUri);
       }
@@ -6804,11 +6812,13 @@ void end_visit(const GroupByClause& v, void* /*visit_state*/)
     nongrouping_rebind.push_back(std::pair<expr*, var_expr*>(inputExpr, ngVar));
   }
 
-  group_clause* clause = theExprManager->create_group_clause(theRootSctx,
-                                          loc,
-                                          grouping_rebind,
-                                          nongrouping_rebind,
-                                          collations);
+  group_clause* clause = theExprManager->
+  create_group_clause(theRootSctx,
+                      loc,
+                      grouping_rebind,
+                      nongrouping_rebind,
+                      collations);
+
   theFlworClausesStack.push_back(clause);
 }
 
