@@ -391,17 +391,17 @@ void MaterializeClause::accept(PlanIterVisitor& v) const
 { 
   v.beginVisitMaterializeClause();
 
-  ulong numVars = (ulong)theInputForVars.size();
+  csize numVars = theInputForVars.size();
 
-  for (ulong i = 0; i < numVars; ++i)
+  for (csize i = 0; i < numVars; ++i)
   {
     v.beginVisitMaterializeVariable(true, theInputForVars[i], theOutputForVarsRefs[i]);
     v.endVisitMaterializeVariable();
   }
 
-  numVars = (ulong)theInputLetVars.size();
+  numVars = theInputLetVars.size();
 
-  for (ulong i = 0; i < numVars; ++i)
+  for (csize i = 0; i < numVars; ++i)
   {
     v.beginVisitMaterializeVariable(false, theInputLetVars[i], theOutputLetVarsRefs[i]);
     v.endVisitMaterializeVariable();
@@ -576,14 +576,14 @@ void GroupByClause::accept(PlanIterVisitor& v) const
 { 
   v.beginVisitGroupByClause();
 
-  ulong numSpecs = (ulong)theGroupingSpecs.size();
-  for (ulong i = 0; i < numSpecs; ++i)
+  csize numSpecs = theGroupingSpecs.size();
+  for (csize i = 0; i < numSpecs; ++i)
   {
     theGroupingSpecs[i].accept(v);
   }
 
-  numSpecs = (ulong)theNonGroupingSpecs.size();
-  for (ulong i = 0; i < numSpecs; ++i)
+  numSpecs = theNonGroupingSpecs.size();
+  for (csize i = 0; i < numSpecs; ++i)
   {
     theNonGroupingSpecs[i].accept(v);
   }
@@ -599,14 +599,14 @@ uint32_t GroupByClause::getStateSizeOfSubtree() const
 {
   uint32_t size = 0;
 
-  ulong numSpecs = (ulong)theGroupingSpecs.size();
-  for (ulong i = 0; i < numSpecs; ++i)
+  csize numSpecs = theGroupingSpecs.size();
+  for (csize i = 0; i < numSpecs; ++i)
   {
     size += theGroupingSpecs[i].getStateSizeOfSubtree();
   }
   
-  numSpecs = (ulong)theNonGroupingSpecs.size();
-  for (ulong i = 0; i < numSpecs; ++i)
+  numSpecs = theNonGroupingSpecs.size();
+  for (csize i = 0; i < numSpecs; ++i)
   {
     size += theNonGroupingSpecs[i].getStateSizeOfSubtree();
   }
@@ -1458,7 +1458,6 @@ void FLWORIterator::materializeGroupTuple(
 
   GroupTuple* groupTuple = new GroupTuple();
   std::vector<store::Item_t>& groupTupleItems = groupTuple->theItems;
-  std::vector<store::Item_t>& groupTupleValues = groupTuple->theTypedValues;
 
   std::vector<GroupingSpec> groupSpecs = theGroupByClause->theGroupingSpecs;
   std::vector<GroupingSpec>::iterator specIter = groupSpecs.begin();
@@ -1469,40 +1468,7 @@ void FLWORIterator::materializeGroupTuple(
     groupTupleItems.push_back(NULL);
     store::Item_t& tupleItem = groupTupleItems.back();
     
-    groupTupleValues.push_back(NULL);
-    store::Item_t& tupleValue = groupTupleValues.back();
-
-    bool status = consumeNext(tupleItem, specIter->theInput, planState);
-
-    if (status)
-    {
-      store::Iterator_t typedValueIter;
-
-      tupleItem->getTypedValue(tupleValue, typedValueIter);
-
-      if (typedValueIter != NULL)
-      {
-        typedValueIter->open();
-        if (typedValueIter->next(tupleValue))
-        {
-          store::Item_t temp;
-          if (typedValueIter->next(temp))
-          {
-            RAISE_ERROR(err::XPTY0004, theGroupByClause->theLocation,
-            ERROR_PARAMS(ZED(SingletonExpected_2o),
-                         ZED(AtomizationHasMoreThanOneValue)));
-          }
-        }
-      }
-
-      // check that there are no more values for the current grouping column
-      store::Item_t temp;
-      if (consumeNext(temp, specIter->theInput, planState))
-      {
-        RAISE_ERROR(err::XPTY0004, theGroupByClause->theLocation,
-        ERROR_PARAMS(ZED(SingletonExpected_2o)));
-      }
-    }
+    consumeNext(tupleItem, specIter->theInput, planState);
 
     specIter->reset(planState);
     ++specIter;
@@ -1642,7 +1608,7 @@ void FLWORIterator::rebindGroupTuple(
   GroupTuple* groupTuple = (*groupMapIter).first;
   std::vector<store::Item_t>::iterator groupKeyIter = groupTuple->theItems.begin();
 
-  std::vector<GroupingSpec> groupSpecs = theGroupByClause->theGroupingSpecs;
+  std::vector<GroupingSpec>& groupSpecs = theGroupByClause->theGroupingSpecs;
   std::vector<GroupingSpec>::const_iterator specIter = groupSpecs.begin();
   std::vector<GroupingSpec>::const_iterator specEnd = groupSpecs.end();
 
