@@ -213,6 +213,7 @@ public:
     INDEX_KEY,
     PATH_STEP,
     PATH_DOT,
+    MULTI_VALUED_GROUPING_KEY,
     JSONIQ_VALUE,
     JSONIQ_UPDATE_TARGET,
     JSONIQ_OBJECT_UPDATE_TARGET,
